fix: address bot round-1 feedback
- Templates now load with their own provisioned spec: the manifest's
  two world lists collapse into one provisionedWorlds list (name,
  environment, worldType, seed, loadOnStartup) - the single source of
  truth for preloading AND template validation. A template folder
  lacking complete world data generates with its configured settings
  instead of hardcoded defaults (Codex P2).
- Menu actions validate their arguments before the auto-wait, so
  invalid input fails immediately with the right cause instead of
  after a 10s menu wait (Codex P3 / CodeRabbit).
- awaitOpenMenu's diagnostic snapshot is best-effort: a failing
  snapshot is attached as suppressed instead of masking the original
  wait failure (CodeRabbit).
- Rewritten manifest tests use strictly distinct setup/execute/verify
  sections (CodeRabbit).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01P15FjGQzyNmX9T6Qmyq8Dn